# VulkanAndroid

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: triangle.frag.spv  triangle.vert.spv
app/src/main/cpp/: FileReader.cpp  FileReader.h  Main.cpp  VulkanMain.cpp  VulkanMain.h  vulkan_wrapper.h
app/src/main/cpp/camera/: Camera.cpp  Camera.h  FocusedCamera.cpp  FocusedCamera.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
